# CaseMaker

./: CMakeLists.txt
case/: array.hpp  string.hpp  tree.hpp
core/: graph.hpp  integer.hpp  string.hpp
